<resources>
    <string name="app_name">GKRef</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="login_screen">LOGIN</string>
    <string name="logout">logout</string>
    <string name="menu">Menu</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_act">New Act</string>
    <string name="history">History</string>
    <string name="next">next</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="teams">Teams</string>
    <string name="local">Local</string>
    <string name="visitor">Visitor</string>
    <string name="preview">Preview</string>
    <string name="finish">finish</string>
    <string name="part1">Part 1</string>
    <string name="game">Game</string>
    <string name="part2">Part 2</string>
    <string name="part3">Part 3</string>
    <string name="part4">Part 4</string>
    <string name="time_out">Time Out</string>
    <string name="time_out_visitor">TO Visitor</string>
    <string name="time_out_local">TO Local</string>
    <string name="selected_date_is">Selected Date is :</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">select time</string>
    <string name="selected_time_is">Selected Time is:</string>
    <string name="reset">reset</string>
    <string name="gender">Gender</string>
    <string name="league">League</string>
    <string name="category">Category</string>
    <string name="local_score">00</string>
    <string name="end_match">End Match</string>
    <string name="result">Game result:</string>
    <string name="finalpart">Final</string>
    <string name="info">Info</string>
    <string name="players_name" />
    <string name="profile">Profile</string>
</resources>