<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.itb.gkref.Activities.MainActivity">

    <item
        android:id="@+id/menu_history"
        android:orderInCategory="100"
        android:title="@string/history"
        android:icon="@drawable/ic_history_foreground"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_act"
        android:orderInCategory="100"
        android:title="@string/new_act"
        android:icon="@drawable/ic_newact_foreground"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_foreground"
        app:showAsAction="never" />

</menu>