<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fons"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:scaleX="3"
        android:translationX="-100sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainmenu"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_act"
        android:textColor="?colorPrimary"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        app:backgroundTint="?background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainmenu"
        tools:ignore="MissingConstraints">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newact"
        android:layout_centerHorizontal="true"
        android:text="@string/history"
        android:textColor="?colorPrimary"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        app:backgroundTint="?background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newact"
        tools:ignore="MissingConstraints">

    </com.google.android.material.button.MaterialButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="?colorPrimary"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textColor="?background"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>