<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fons"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:scaleX="3"
        android:translationX="-100sp"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="-102dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/teams"
        android:background="@color/bright_BG"
        android:textColor="@color/dark_BG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/teams"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="114dp" />

    <TextView
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:background="@color/bright_BG"
        android:text="@string/local"
        android:textColor="@color/main"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/visitor"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/bright_BG"
        android:text="@string/visitor"
        android:textColor="@color/main"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/local_team"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/bright_BG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/local_coach"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/bright_BG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_team"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:background="@color/bright_BG"
        android:id="@+id/visitor_coach"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_team"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/local_players"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/bright_BG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_team"
        app:layout_constraintVertical_bias="0.266"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/visitor_team"
        android:background="@color/bright_BG"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitor"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/visitor_players"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/bright_BG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitor"
        app:layout_constraintVertical_bias="0.402"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="109dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="516dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>